--- a/src/app/fuel-ui-cli-quickstart.component.html
+++ b/src/app/fuel-ui-cli-quickstart.component.html
@@ -34,7 +34,7 @@
         padding: 0 25px;
     }
 </style>
-<div id="collapse-demo-box" [collapse]="collapsed" [duration]="duration">
+<div id="collapse-demo-box" @collapse="collapsed ? 'true' : 'false'" >
     <h2>All of your content</h2>
     <ul>
         <li>That you wish</li>
